# spell-checker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  format.sh  readme.md
benchmarks/: benchmark.h  linear_dict_benchmark.cpp  trie_benchmark.cpp  trie_dict_benchmark.cpp
data/: english.txt
include/: dictionary_loader.h  levenshtein.h  linear_dictionary.h  trie.h  trie_dictionary.h
src/: dictionary_loader.cpp  dummy_demo.cpp  levenshtein.cpp  linear_dictionary.cpp  main.cpp  trie.cpp  trie_demo.cpp  trie_dictionary.cpp
tests/: dictionary_loader_test.cpp  levenshtein_test.cpp  trie_dictionary_test.cpp  trie_test.cpp
